https://github.com/haxtheweb/issues/issues/2857
